# JobPostingExtractor

./: .gitignore  README.md  cover_letter_guide.md  full_profile.md  original_cover_letter.md  original_resume.md  profile_fit_evaluation.md  pyproject.toml  resume_guide.md
db/: chroma.sqlite3
src/job_application_crew/: crew.py  job_urls.py  main.py
src/job_application_crew/config/: agents.yaml  tasks.yaml
src/job_application_crew/templates/: resume_template.html
src/job_application_crew/tools/: custom_tool.py
src/job_application_crew/utils/: custom_callbacks.py
