[project]
name = "job_application_crew"
version = "0.1.0"
description = "job_application_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
job_application_crew = "job_application_crew.main:run"
run_crew = "job_application_crew.main:run"
train = "job_application_crew.main:train"
replay = "job_application_crew.main:replay"
test = "job_application_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
